lintian (2.1.7) UNRELEASED; urgency=low

  * checks/*.desc:
    + [RA] Replace `' "balanced" quotes with straight double-quotes.  The
      old style looks strange with modern fonts.  Based on work by Raphael
      Geissert.
  * checks/control-file.desc:
    + [ADB] Fix a typo ("arne't").  Thanks, Raphael Geissert.
  * checks/debhelper.desc:
    + [ADB] Remove no longer required "Type" fields from a couple of
      entries.  Thanks, Raphael Geissert.
    + [ADB] Fix a couple of typoes.  Thanks, Raphael Geissert.
  * checks/files:
    + [RA] Add swfobject.js to embedded-javascript-library.  Thanks, Paul
      Wise.  (Closes: #512363)
  * checks/standards-version{,.desc}:
    + [ADB] Add source-control-file to the list of information needed by
      the script.  Thanks, Raphael Geissert.  (Closes: #512563)
    + [RA] Use Lintian::Data to get the standards versions and release
      dates.  Dates are now in seconds since epoch, so remove the date
      conversion code.

  * collection/*.desc:
    + [RA] Replace `' "balanced" quotes with straight double-quotes.  The
      old style looks strange with modern fonts.  Based on work by Raphael
      Geissert.

  * data/standards-version/release-dates:
    + [RA] Known standards versions and their release dates in seconds
      since epoch, taken from checks/standards-version.

  * lib/Checker.pm:
    + [ADB] Remove some unused code.
  * lib/Lintian/Collect/Source.pm:
    + [ADB] Add a missing "use Util" as the module uses the fail() function
      from that module.  Thanks, Raphael Geissert.  (Closes: #512560)
  * lib/Text_utils.pm:
    + [ADB] Add a missing "use Util" as the module uses the fail() function
      from that module.  Thanks, Raphael Geissert.

 -- Russ Allbery <rra@debian.org>  Mon, 19 Jan 2009 20:45:31 -0800

lintian (2.1.6) unstable; urgency=low

  * Summary of tag changes:
    + Added
      - diff-contains-cmake-cache-file
      - diff-contains-hg-tags-file
      - duplicate-uploader